    - Added api routine to get the current Retry type.
    - Added api routine to get SRAM address of any variable saved by Retry.
    - Added !draw_retry_indicator setting to draw an indicator in the sprite status bar when the level has Retry enabled (thanks to MiracleWater for the indicator gfx).
    - Fixed potential issue when drawing Dragon Coins in the sprite status bar.

v0.6.2:
    - Avoid using Mario's pipe entrance state to reload a level. This can fix potential issues with custom code that checks for Mario's animation state (thanks to LouisDoucet for reporting this).
    - Moved "misc.asm" and "rom.asm" out of the "retry_config" folder, since these are not supposed to be edited by the user in 99.9% of cases.
    - Added !no_prompt_draw option to not have the prompt drawn on screen for a minimalistic result. This achieves the same effect as making the included GFX files blank, but saves ROM space and avoids having to reserve sprite GFX tiles for it.
    - Removed "math pri", "math round" and "rep X" commands, since they're deprecated since Asar 1.90 and they weren't needed anyway.

v0.6.1:
    - Added an option for the counterbreak settings to only apply on level reload or on Overworld loading, instead of being forced for both (use values 2 and 3 for the !counterbreak_xxx settings).
    - Fixed the !title_death_behavior setting not working when using UberASMTool 2.0 (thanks to MiracleWater for reporting this).
    - Fixed the sprite status bar being glitched (and possibly other undiscovered issues...) in vanilla mode 7 boss rooms (thanks to Alex for reporting this).

v0.6.0:
    - Fixed compilation errors when using !fast_prompt = 0 (thanks to Koopster for reporting this).
    - Changed default values for !fast_transitions, !fast_prompt and !death_camera_lock in "settings.asm" to 0.
    - Fixed sfx echo not working sometimes when changing music in the middle of a level (for example with P-Switch or Starman).