@@ -9,9 +9,16 @@ pullpc
 
 lose_lives:
 if not(!infinite_lives)
-    ; Decrement lives if applicable, and go to Game Over if they're over.
+    ; Check if we need to decrement lives.
     jsr shared_get_bitwise_mask
     and.l tables_lose_lives,x : beq .normal
+
+    ; If yes and lives at 0, go to game over.
+    lda $0DBE|!addr : beq .game_over
+
+    ; Otherwise, decrement them if Retry is disabled.
+    jsr shared_get_prompt_type
+    cmp #$04 : bne .normal
     dec $0DBE|!addr
     bpl .normal
 .game_over:
