@@ -1,0 +1,149 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Retry Local Settings</title>
+  <meta name="author" content="KevinM">
+  <style>
+    body {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+    }
+    p, li, th, td {
+      line-height: 150%;
+    }
+    code {
+      font-size: 16px;
+      padding: 2px 4px;
+      background: rgba(0,0,0,.05);
+      border-radius: 4px;
+    }
+    blockquote {
+      font-style: italic;
+    }
+    table, th, td {
+      border: 1px solid black;
+      text-align: center;
+    }
+    .no-center {
+      text-align: left;
+    }
+  </style>
+</head>
+<body>
+  <h2>Retry local settings</h2>
+  <p>Local settings are those Retry options that can be configured on a level-specific basis. These options must be inserted in the <code>settings_local.asm</code> file. If you used older version of Retry, these are equivalent to the various tables you had to change the values of, but made simpler by not having to manage big tables of hex data.</p>
+  <p>If you still prefer the table approach, you can set <code>!use_legacy_tables = 1</code> in <code>settings_global.asm</code> and edit the tables in <code>legacy/tables.asm</code> as you're used to. In this case, ignore this document and the <code>settings_local.asm</code> file.</p>
+  <br/>
+
+  <h3>Overview</h3>
+  <p>This approach of configuring the level-specific settings uses instructions that enable some setting for a specified level number. Each instruction must be put on a separate line in the asm file.</p>
+  <p>There are various instruction types, but most times you'll probably only use one or two of them for any given level, if any.</p>
+  <p>The instruction types are the following:</p>
+  <ul>
+    <li><a href="#checkpoint">%checkpoint(level, value)</a></li>
+    <li><a href="#retry">%retry(level, value)</a></li>
+    <li><a href="#checkpoint_retry">%checkpoint_retry(level, checkpoint, retry)</a></li>
+    <li><a href="#sfx_echo">%sfx_echo(level)</a></li>
+    <li><a href="#no_reset_rng">%no_reset_rng(level)</a></li>
+    <li><a href="#disable_room_cp_sfx">%disable_room_cp_sfx(level)</a></li>
+    <li><a href="#no_lose_lives">%no_lose_lives(level)</a></li>
+    <li><a href="#settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, disable_room_cp_sfx, no_lose_lives)</a></li>
+  </ul>
+  <br/>
+
+  <h3 id="checkpoint">%checkpoint(level, value)</h3>
+  <p>This allows you to configure the checkpoint behavior for the specified level. <code>value</code> can have one of the following values:</p>
+  <ul>
+    <li><code>0</code>: vanilla checkpoint. The midway bar in the corresponding sublevel will lead to the midway entrance of the <b>main</b> level.</li>
+    <li><code>1</code>: the midway bar in the corresponding sublevel will lead to the midway entrance of the sublevel.</li>
+    <li><code>2</code>: any main/secondary/midway entrance through door/pipe/etc. whose destination is the corresponding sublevel will trigger a checkpoint like midway bars, and the checkpoint will lead to this entrance.</li>
+    <li><code>3</code>: this enables both the effects of <code>1</code> and <code>2</code>.</li>
+  </ul>
+  <p>If this option isn't specified for a level, then it will default to <code>0</code> (vanilla checkpoint behavior).</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%checkpoint($105,2)</code>: sublevel $105 will have automatic checkpoints on any entrance to it.</li>
+    <li><code>%checkpoint($025,3)</code>: sublevel $025 will have automatic checkpoints on any entrance to it and its midway will lead to sublevel $025's midway entrance instead of the main level's midway entrance.</li>
+  </ul>
+  <p>Note that you can also use custom midway objects (that look like vanilla midway bars) to have multiple midways. See <a href="./midway_instruction.html">Custom Midway Instructions</a> for more information.</p>
+  <br/>
+
+  <h3 id="retry">%retry(level, value)</h3>
+  <p>This allows to override the Retry type for the specified level. <code>value</code> can have one of the following values:</p>
+  <ul>
+    <li><code>0</code>: follow the global setting (<code>!default_prompt_type</code> in <code>settings_global.asm</code>).</li>
+    <li><code>1</code>: enable Retry prompt and play the death jingle when the player dies. Recommended if you want the music to restart on each death.</li>
+    <li><code>2</code>: enable Retry prompt and only play the death sfx when the player dies (music won't be interrupted).</li>
+    <li><code>3</code>: enable instant Retry and only play only the deaht sfx (the fastest option, as if "Retry" is chosen automatically in the Retry prompt).</li>
+    <li><code>4</code>: Retry disabled (as if "Exit" is chosen automatically in the Retry prompt). Use this to have the vanilla death sequence.</li>
+  </ul>
+  <p>If this option isn't specified for a level, then it will default to <code>0</code> (follow the global setting).</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%retry($001,2)</code>: sublevel $001 will have Retry prompt with death sfx.</li>
+    <li><code>%retry($069,3)</code>: sublevel $069 will have instant Retry.</li>
+    <li><code>%retry($1FF,4)</code>: sublevel $1FF will have no Retry.</li>
+  </ul>
+  <br/>
+
+  <h3 id="checkpoint_retry">%checkpoint_retry(level, checkpoint, retry)</h3>
+  <p>This is a shorthand to configure the checkpoint and Retry type for a level with the same instruction. <code>checkpoint</code> follows the <code>%checkpoint</code> format and <code>retry</code> follows the <code>%retry</code> format.</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%checkpoint_retry($101,1,1)</code>: sublevel $101 will have the sublevel midway bar behavior and Retry prompt with death jingle.</li>
+    <li><code>%checkpoint_retry($102,2,0)</code>: sublevel $102 will have automatic checkpoints on entrance and follow the global Retry setting.</li>
+  </ul>
+  <br/>
+
+  <h3 id="sfx_echo">%sfx_echo(level)</h3>
+  <p>This will enable SFX echo in the specified sublevel. Note that this option only works if AddmusicK is used in the ROM, and the SFX uses the same echo as the music (if the music has no echo, then the SFX also won't have echo).</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%sfx_echo($105)</code>: sublevel $105 will have SFX echo enabled.</li>
+  </ul>
+  <br/>
+
+  <h3 id="no_reset_rng">%no_reset_rng(level)</h3>
+  <p>Normally Retry resets the RNG seed every time a level is reloaded, to make setups consistent between deaths. Using this option will make the RNG not reset when retrying in this sublevel.</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%no_reset_rng($105)</code>: sublevel $105 won't have the RNG reset when reloading it with Retry.</li>
+  </ul>
+  <br/>
+
+  <h3 id="disable_room_cp_sfx">%disable_room_cp_sfx(level)</h3>
+  <p>If a level uses the checkpoint type <code>2</code> or <code>3</code>, then a SFX is played when the automatic checkpoint is triggered (the SFX is defined by <code>!room_cp_sfx</code> in <code>settings_global.asm</code>.</p>
+  <p>If you use this, then the automatic checkpoints in the specified sublevel won't have any SFX. If <code>!room_cp_sfx = 0</code>, you can ignore this.</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%disable_room_cp_sfx($105)</code>: sublevel $105 won't have any SFX when getting an entrance checkpoint.</li>
+  </ul>
+  <br/>
+
+  <h3 id="no_lose_lives">%no_lose_lives(level)</h3>
+  <p>If infinite lives is disabled (<code>!infinite_lives = 0</code> in <code>settings_global.asm</code>), you can prevent life loss in specific sublevels using this option (for example for tutorial rooms or cutscenes).</p>
+  <p>If <code>!infinite_lives = 1</code>, you can ignore this.</p>
+  <p>Examples:</p>
+  <ul>
+    <li><code>%no_lose_lives($105)</code>: dying in sublevel $105 won't reduce lives.</li>
+  </ul>
+  <br/>
+
+  <h3 id="settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, disable_room_cp_sfx, no_lose_lives)</h3>
+  <p>This is a shorthand to configure all the settings for the specified level at the same time.</p>
+  <p>The arguments are:</p>
+  <ul>
+    <li><code>level</code>: the sublevel number.</li>
+    <li><code>checkpoint</code>: same as <code>value</code> in <code>%checkpoint</code>.</li>
+    <li><code>retry</code>: same as <code>value</code> in <code>%retry</code>.</li>
+    <li><code>sfx_echo</code>: if <code>0</code>, SFX echo is disabled in the sublevel. Otherwise, it is enabled.</li>
+    <li><code>no_reset_rng</code>: if <code>0</code>, RNG is reset when retrying in the sublevel. Otherwise, it is not reset.</li>
+    <li><code>disable_room_cp_sfx</code>: if <code>0</code>, automatic checkpoints in the sublevel will play the SFX. Otherwise, they won't play the SFX.</li>
+    <li><code>no_lose_lives</code>: if <code>0</code>, life loss is enabled in the sublevel (if infinite lives is disabled globally). Otherwise, it is disabled.</li>
+  </ul>
+  <br/>
+
+</body>
+</html>
