@@ -6,6 +6,9 @@ v0.6.3:
     - Added api routine to get SRAM address of any variable saved by Retry.
     - Added !draw_retry_indicator setting to draw an indicator in the sprite status bar when the level has Retry enabled (thanks to MiracleWater for the indicator gfx).
     - Fixed potential issue when drawing Dragon Coins in the sprite status bar.
+    - Fixed lives decrementing twice when infinite lives is disabled and Retry is enabled in a level (issue introduced in v0.6.2)
+    - Renamed "settings.asm" to "settings_global.asm".
+    - Removed "tables.asm" and replaced it with the new "settings_local.asm". This now uses a macro-based approach to enable level-specific options, while the old table-based file can still be found under "legacy/tables.asm" for those that prefer it. Check out "docs/settings_local.html" for details.
 
 v0.6.2:
     - Avoid using Mario's pipe entrance state to reload a level. This can fix potential issues with custom code that checks for Mario's animation state (thanks to LouisDoucet for reporting this).
